--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Agrinho</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <nav>
+            <a herf="#">Home</a>
+            <a herf="#"> Saiba mais</a>
+            <main>
+                <section>
+                    <h1>Dos Campos a cidade</h1>
+                    <p>A migração rural para o ambiente urbano é motivada por uma busca de melhores condições de vida e oportunidades econômicas. 
+                        No campo, a agricultura, é vulnerável aos maus tempos e oscilações do mercado, gera instabilidade financeira. 
+                        Contudo, na cidade oferecem um leque de diversas oportunidades devido ao desenvolvimento da infraestrutura, indústria e serviços, além de maior acesso à educação.</p>
 
+                        <p>No entanto, a transição do campo para a cidade apresenta desafios significativos. 
+                            Muitos migrantes apresentam precariedade habitacional, falta de acesso a serviços básicos e discriminação. 
+                            A integração social e econômica desses indivíduos exige políticas públicas que facilitem essa transição, proporcionando suporte educacional e oportunidade de emprego.</p>
+                        
+                        <p>Além disso, a urbanização acelerada pode resultar em superpopulação e esgotamento de recursos urbanos. 
+                            É crucial um planejamento urbano sustentável para acomodar o crescimento populacional sem atrapalhar a qualidade de vida.</p>
+                        
+                        <p>Portanto, a migração, apesar dos desafios é essencial para o desenvolvimento socioeconômico. 
+                            Com políticas adequadas essa transição pode se tornar uma colheita abundante de oportunidades e progresso para todos.</p>
+                </section>
+            </main>
+        </nav>
+    </header>
+</body>
+</html>
