--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                         <p>Portanto, a migração, apesar dos desafios é essencial para o desenvolvimento socioeconômico. 
                             Com políticas adequadas essa transição pode se tornar uma colheita abundante de oportunidades e progresso para todos.</p>
                 </section>
+                <img src="logo.png" class="imagem" alt="imagem dos campos a cidade">
             </main>
+            <footer class="rodape"> Desenvolvido ppor Mário Henrique Padilha</footer>
         </nav>
     </header>
 </body>
